Finished the basics for the reusable items component (gloves, shoes, headgear)

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -72,7 +72,11 @@
 }
 
 #shopping_options_wrapper {
-  background-color: #d4d4d4;
+  background-color: #e0dede;
+  border-top: 1px solid #c9c9c9;
+  border-bottom: 1px solid #bbbbbb;
+  border-right: 1px solid #d8d6d6;
+  border-left: 1px solid #d6d6d6;
 }
 
 .shopping_options_category {
@@ -93,17 +97,25 @@
   border-bottom: 1px solid #8b8b8b;
 }
 
+.shopping_options_category:hover {
+  background-color: #5c5b5b;
+}
+
 .shopping_options_dropdown {
-  background-color: #c9c9c9;
+  background-color: #dadada;
+}
+
+.shopping_options_dropdown {
+  background-color: #838383;
 }
 
 .shopping_options_inputs {
-  background-color: #e0e0e0;
+  background-color: #ebebeb;
   border-bottom: 1px solid #cccccc;
 }
 
 .shopping_options_single_input {
-  padding: 10px;
+  padding: 15px;
 }
 
 #item_list_container {
@@ -144,6 +156,23 @@
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 15px;
+  width: 30%;
+}
+
+.item_button {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(14%, #c61c34), color-stop(52%, #e21a36), color-stop(83%, #e21a36), color-stop(92%, #e21a36), to(#e21a36));
+  background: linear-gradient(180deg, #c61c34 14%, #e21a36 52%, #e21a36 83%, #e21a36 92%, #e21a36 100%);
+  padding: 10px 30px 10px 30px;
+  border-radius: 5px;
+  border: 0px;
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.item_button:hover {
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(14%, #c61c34), color-stop(52%, #e21a36), color-stop(83%, #e21a36), color-stop(92%, #e21a36), to(#e21a36));
+  background: linear-gradient(0deg, #c61c34 14%, #e21a36 52%, #e21a36 83%, #e21a36 92%, #e21a36 100%);
 }
 
 #top_header_container {
@@ -292,6 +321,18 @@
       -ms-flex-direction: row;
           flex-direction: row;
   height: 50px;
+}
+
+.navigation_list_item a {
+  color: white !important;
+  width: 100%;
+  height: 100%;
+  padding-top: 30px;
+}
+
+.navigation_list_item:hover {
+  background-color: #e21a36 !important;
+  color: white;
 }
 
 #navigation_list li {
