--- a/public/styles/navigation.scss
+++ b/public/styles/navigation.scss
@@ -25,6 +25,22 @@
     height: 50px;
 }
 
+.navigation_list_item a {
+
+    color: white!important;
+    width: 100%;
+    height:100%;
+    padding-top: 30px;
+
+}
+
+.navigation_list_item:hover {
+
+    background-color: #e21a36!important;
+    color: white;
+    
+}
+
 
 #navigation_list li {
     width: 100%;
