--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -13,16 +13,16 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: none;
-      -ms-flex-align: none;
-          align-items: none;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-align: none;
+      -ms-flex-align: none;
+          align-items: none;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 65%;
   -ms-flex-item-align: center;
       align-self: center;
@@ -40,16 +40,16 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 1.3em;
   font-size: 14px;
 }
@@ -68,6 +68,11 @@
   border-radius: 5px 0 0 5px;
   padding: 0;
   border: none;
+  margin: 2px 0 0px 0;
+}
+
+#item_search:focus {
+  border: none;
 }
 
 #search_container {
@@ -75,6 +80,8 @@
       -ms-flex-align: center;
           align-items: center;
   height: 30px;
+  background-color: #e0e0e0;
+  border-radius: 5px;
 }
 
 .search_button {
@@ -84,6 +91,6 @@
   background-color: #e0e0e0;
   border: none;
   padding: 0;
-  margin: 0;
+  margin: 1px 0 0 0;
 }
 /*# sourceMappingURL=header.css.map */
