--- a/public/styles/header.scss
+++ b/public/styles/header.scss
@@ -50,6 +50,13 @@
     border-radius: 5px 0 0 5px;
     padding: 0;
     border: none;
+    margin: 2px 0 0px 0;
+
+}
+
+#item_search:focus {
+
+    border: none;
 
 }
 
@@ -57,6 +64,8 @@
 
     align-items: center;
     height: 30px;
+    background-color: rgb(224, 224, 224);
+    border-radius: 5px;
 
 }
 
@@ -67,7 +76,7 @@
     background-color: rgb(224, 224, 224); 
     border: none;
     padding: 0;
-    margin: 0;
+    margin: 1px 0 0 0;
 }
 
 
