--- a/public/styles/home_page.css
+++ b/public/styles/home_page.css
@@ -68,6 +68,7 @@
           justify-content: center;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
+  margin-top: 35px;
 }
 
 .reel_images {
@@ -78,5 +79,149 @@
 .single_reel_image {
   height: auto;
   width: 100%;
+}
+
+/* category section */
+#category_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 55px;
+}
+
+#category_line {
+  width: 85%;
+  height: 3px;
+  background-color: #3a3a3a;
+}
+
+#categories_wrapper {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.category_image {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 350px;
+  height: 350px;
+  margin: 55px 20px 20px 20px;
+  border-radius: 25px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-size: cover;
+  position: relative;
+}
+
+.category_image:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 25px;
+  z-index: 5;
+}
+
+#category_1 {
+  background-position: center top;
+}
+
+#category_1:hover {
+  z-index: auto;
+  opacity: 0.7;
+  -webkit-transition: all 1.5s ease;
+  transition: all 1.5s ease;
+  background-position: right;
+}
+
+#category_1:hover .centered_text {
+  border-color: white;
+}
+
+#category_2 {
+  background-position: center top;
+}
+
+#category_2:hover {
+  z-index: auto;
+  opacity: 0.7;
+  -webkit-transition: all 1.5s ease;
+  transition: all 1.5s ease;
+  background-position: center;
+  background-position: right;
+}
+
+#category_2:hover .centered_text {
+  border-color: white;
+}
+
+#category_3 {
+  background-position: center top;
+}
+
+#category_3:hover {
+  z-index: auto;
+  opacity: 0.7;
+  -webkit-transition: all 1.5s ease;
+  transition: all 1.5s ease;
+  background-position: center;
+  background-position: left;
+}
+
+#category_3:hover .centered_text {
+  border-color: white;
+}
+
+#category_4 {
+  background-position: center top;
+}
+
+#category_4:hover {
+  z-index: auto;
+  opacity: 0.7;
+  -webkit-transition: all 1.5s ease;
+  transition: all 1.5s ease;
+  background-position: left;
+}
+
+#category_4:hover .centered_text {
+  border-color: white;
+}
+
+.centered_text {
+  color: white;
+  text-align: center;
+  position: absolute;
+  font-size: 25px;
+  font-weight: 600;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  z-index: 10;
+  -webkit-transition: 300ms;
+  transition: 300ms;
+  border-bottom: 2px solid transparent;
 }
 /*# sourceMappingURL=home_page.css.map */
