--- a/public/styles/home_page.scss
+++ b/public/styles/home_page.scss
@@ -67,6 +67,7 @@
     flex-direction: row;
     justify-content: center;
     flex-wrap: nowrap;
+    margin-top: 35px;
     
 }
 
@@ -83,5 +84,145 @@
     width: 100%;
 
 }
+
+/* category section */ 
+
+#category_container {
+
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 55px;
+
+}
+
+#category_line {
+
+    width: 85%;
+    height: 3px;
+    background-color: #3a3a3a;
+
+}
+
+#categories_wrapper {
+
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin-right: auto;
+    margin-left: auto;
+
+}
+
+.category_image {
+
+    align-self: center;
+    width: 350px;
+    height: 350px;
+    margin: 55px 20px 20px 20px;
+    border-radius: 25px;
+    box-sizing: border-box;
+    background-size: cover;
+    position: relative;
+
+}
+
+.category_image:before {
+    content:"";
+    position: absolute;
+    top:0;
+    left:0;
+    height:100%;
+    width:100%;
+    background: rgba(0,0,0,0.5);
+    border-radius: 25px;
+    z-index:5;
+}
+
+#category_1 {
+    background-position: center top;
+}
+
+#category_1:hover {
+    z-index: auto;
+    opacity: 0.7;
+    transition: all 1.5s ease;
+    background-position: right;
+}
+
+#category_1:hover .centered_text {
+    border-color: white;
+}
+
+#category_2 {
+    background-position: center top;
+}
+
+#category_2:hover {
+    z-index: auto;
+    opacity: 0.7;
+    transition: all 1.5s ease;
+    background-position: center;
+    background-position: right;
+}
+
+#category_2:hover .centered_text {
+    border-color: white;
+}
+
+
+#category_3 {
+    background-position: center top;
+}
+
+#category_3:hover {
+    z-index: auto;
+    opacity: 0.7;
+    transition: all 1.5s ease;
+    background-position: center;
+    background-position: left;
+}
+
+#category_3:hover .centered_text {
+    border-color: white;
+}
+
+
+#category_4 {
+    background-position: center top;
+}
+
+#category_4:hover {
+    z-index: auto;
+    opacity: 0.7;
+    transition: all 1.5s ease;
+    background-position: left;
+}
+
+#category_4:hover .centered_text {
+    border-color: white;
+}
+
+.centered_text {
+    color: white;
+    text-align: center;
+    position:absolute;
+    font-size: 25px;
+    font-weight: 600;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    z-index: 10;
+    transition: 300ms;
+    border-bottom: 2px solid transparent;
+}
+
+
+
+
+
+
+
 
 
