--- a/public/styles/home_page.css
+++ b/public/styles/home_page.css
@@ -35,7 +35,7 @@
 
 #heroTag {
   position: absolute;
-  bottom: 33%;
+  bottom: 35%;
   left: 50px;
   color: white;
   text-align: left;
@@ -51,6 +51,85 @@
 
 #heroTag p {
   font-size: 18px;
+}
+
+.slider_home {
+  opacity: 0;
+  padding: 0;
+  margin: 0;
+  -webkit-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+}
+
+.slider_home.inactive {
+  display: none;
+  -webkit-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+}
+
+.slider_home.active {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  opacity: 1;
+  display: block;
+  -webkit-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+  -webkit-animation: moveIn 1.5s;
+          animation: moveIn 1.5s;
+}
+
+@-webkit-keyframes moveIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes moveIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#chooser1 {
+  border: 1px solid #c2c2c2;
+  width: 10px;
+  height: 10px;
+  border-radius: 35px;
+  position: absolute;
+  bottom: 5%;
+  left: 52%;
+  padding: 20px;
+}
+
+#chooser2 {
+  border: 1px solid #c2c2c2;
+  width: 10px;
+  height: 10px;
+  border-radius: 45px;
+  position: absolute;
+  bottom: 5%;
+  left: 48%;
+  padding: 20px;
+}
+
+.chooser.active {
+  background-color: #c2c2c2;
+  -webkit-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+}
+
+.chooser.inactive {
+  background-color: none;
+  -webkit-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
 }
 
 /* Reel */
