--- a/public/styles/single_product.css
+++ b/public/styles/single_product.css
@@ -88,8 +88,8 @@
 
 .slide {
   opacity: 0;
-  -webkit-transition-duration: 3s ease;
-          transition-duration: 3s ease;
+  -webkit-transition: all 3s ease-in;
+  transition: all 3s ease-in;
 }
 
 .slide.active {
@@ -97,9 +97,35 @@
   width: 100%;
   -o-object-fit: contain;
      object-fit: contain;
+  -webkit-animation: visible 1s;
+          animation: visible 1s;
   opacity: 1;
-  -webkit-transition-duration: 3s ease;
-          transition-duration: 3s ease;
+}
+
+@-webkit-keyframes visible {
+  from {
+    opacity: 0;
+    -webkit-transform: translateX(102px);
+            transform: translateX(102px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes visible {
+  from {
+    opacity: 0;
+    -webkit-transform: translateX(102px);
+            transform: translateX(102px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
 }
 
 #left_arrow_gallery {
